# spreadsheet

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.py  main.py  pyproject.toml
bindings/: bindings.cpp
core/: formula.cpp  formula.h  main.cpp  sparse_matrix.cpp  sparse_matrix.h  types.h
ui/: app.py  grid.py
